feat: 添加RPC动态更新功能并优化README
- 新增RPC动态更新功能，支持无需重启aria2即可更新tracker
- 支持三种更新模式：config、rpc、hybrid
- 集成完整的RPC教程到README中
- 删除不存在的虚假安装方式，保留真实可用的一键安装
- 清理测试文件，优化文档结构
- 修复AI幻觉产生的错误内容
- 增加详细的故障排除指南

--- a/config.json
+++ b/config.json
@@ -11,5 +11,14 @@
   "request_timeout": 10,
   "max_retries": 3,
   "log_level": "INFO",
-  "log_file": "bt_tracker_update.log"
+  "log_file": "bt_tracker_update.log",
+  "rpc": {
+    "enabled": false,
+    "url": "http://localhost:6800/jsonrpc",
+    "secret": "",
+    "timeout": 10,
+    "verify_ssl": true
+  },
+  "update_mode": "config",
+  "fallback_to_config": true
 }
